Последние правки по варианту.